Added Fig. 1, citations are now superscripted.

--- a/report.bib
+++ b/report.bib
@@ -36,7 +36,7 @@
 	pages = "211--215"
 }
 
-@conference{torio,
+@inproceedings{torio,
 	author = "Torio, Guy; Segota, Jeff",
 	title = "Unique Directional Properties of Dual-Diaphragm Microphones",
 	address = "Evanston, Illinois 60202, USA",
@@ -60,32 +60,50 @@
 
 %%%
 
-@electronic{boyer,
+@online{boyer,
 	author = "Boyer, Mark",
 	title = "10 Types of Microphones",
 	year = "2000",
 	month = 4,
-	url = "http://electronics.howstuffworks.com/gadgets/audio-music/question309.htm"
+	url = "http://electronics.howstuffworks.com/gadgets/audio-music/question309.htm",
+	urldate = "2014-02-24"
 }
 
-@electronic{nave,
+@online{nave,
 	author = "Nave, Rob",
 	title = "Microphones",
 	year = "2000",
-	url = "http://hyperphysics.phy-astr.gsu.edu/hbase/audio/mic.html"
+	url = "http://hyperphysics.phy-astr.gsu.edu/hbase/audio/mic.html",
+	urldate = "2014-02-24"
 }
 
-@electronic{shambro,
+@online{shambro,
 	author = "Shambro, Joe",
 	title = "Condenser vs. Dynamic Microphones",
 	year = "2014",
-	url = "http://homerecording.about.com/od/microphones101/a/mic_types.htm"
+	url = "http://homerecording.about.com/od/microphones101/a/mic_types.htm",
+	urldate = "2014-02-24"
 }
 
-@electronic{white,
+@online{white,
 	author = "White, Paul",
 	title = "Mic Types \& Characteristics",
 	year = "1998",
 	month = 4,
-	url = "http://www.soundonsound.com/sos/apr98/articles/mic_types.html"
+	url = "http://www.soundonsound.com/sos/apr98/articles/mic_types.html",
+	urldate = "2014-02-24"
+}
+
+@online{oktava,
+	author = "Oktava GmbH",
+	title = "Oktava MK-319 condenser microphone",
+	url = "http://www.oktava-online.com/mk319.htm",
+	urldate = "2014-04-20"
+}
+
+@online{shure,
+	author = "Shure Incorporated",
+	title = "SM58 Vocal Microphone",
+	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
+	urldate = "2014-04-20"
 }
