Changed image filename and figure references

--- a/report.bib
+++ b/report.bib
@@ -107,3 +107,5 @@
 	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
 	urldate = "2014-04-20"
 }
+
+@online{fig1
