started (II) Sensor Structure

--- a/report.bib
+++ b/report.bib
@@ -91,21 +91,22 @@
 	year = "1998",
 	month = 4,
 	url = "http://www.soundonsound.com/sos/apr98/articles/mic_types.html",
-	urldate = "2014-02-24"
+	urldate = "2014-02-24",
+	year = "2014"
 }
 
 @online{oktava,
 	author = "Oktava GmbH",
 	title = "Oktava MK-319 condenser microphone",
 	url = "http://www.oktava-online.com/mk319.htm",
-	urldate = "2014-04-20"
+	urldate = "2014-04-20",
+	year = "2014"
 }
 
 @online{shure,
 	author = "Shure Incorporated",
 	title = "SM58 Vocal Microphone",
 	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
-	urldate = "2014-04-20"
+	urldate = "2014-04-20",
+	year = "2014"
 }
-
-@online{fig1
