Added more figures and tables, started subsection II (A)

--- a/report.bib
+++ b/report.bib
@@ -1,4 +1,11 @@
 
+@book{aip,
+	author = "Wong, George S.K.; Embleton, Tony F.W.",
+	title = "AIP Handbook of Condenser Microphones: Theory, Calibration and Measurements"
+	
+}
+	
+
 @incollection{schomburg,
 	author = "Schomburg, Werner K.",
 	title = "Membranes",
@@ -29,7 +36,7 @@
 }
 
 @article{streicher,
-	author = "Streicher, Ron; Dooley, Wes",
+	author = "Streicher, Ron and Dooley, Wes",
 	title = "The Bidirectional Microphone: A Forgotten Patriarch",
 	journal = "Journal of the Audio Engineering Society",
 	year = "2003",
@@ -37,7 +44,7 @@
 }
 
 @inproceedings{torio,
-	author = "Torio, Guy; Segota, Jeff",
+	author = "Torio, Guy and Segota, Jeff",
 	title = "Unique Directional Properties of Dual-Diaphragm Microphones",
 	address = "Evanston, Illinois 60202, USA",
 	organization = "Audio Engineering Society",
@@ -92,21 +99,34 @@
 	month = 4,
 	url = "http://www.soundonsound.com/sos/apr98/articles/mic_types.html",
 	urldate = "2014-02-24",
-	year = "2014"
+	publisher = {{Sound On Sound}}
 }
 
 @online{oktava,
-	author = "Oktava GmbH",
+	author = {{Oktava GmbH}},
 	title = "Oktava MK-319 condenser microphone",
 	url = "http://www.oktava-online.com/mk319.htm",
 	urldate = "2014-04-20",
+	publisher = {{Oktava GmbH}},
 	year = "2014"
 }
 
 @online{shure,
-	author = "Shure Incorporated",
+	author = {{Shure Inc.}},
 	title = "SM58 Vocal Microphone",
 	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
 	urldate = "2014-04-20",
+	publisher = {{Shure Incorporate}},
 	year = "2014"
+}
+
+@manual{Bruel,
+	author = {{Brüel \& Kjær}},
+	title = "Microphone Handbook, Vol. 1: Theory",
+	publisher = {{Brüel \& Kjær}},
+	year = "1996",
+	address = "Nærum, Denmark",
+	number = "BE 1447–11",
+	url = "http://www.bksv.com/doc/be1447.pdf",
+	urldate = "2014-04-29"
 }
