--- a/report.tex
+++ b/report.tex
@@ -415,7 +415,7 @@ Let the air-gap between the membrane and back-plate be denoted by $h_0$. If we t
 	\end{equation}
 \end{figure}
 
-\subsectoin{Voltage}
+\subsection{Voltage}
 
 
 % An example of a floating figure using the graphicx package.
