clarified and reorganized floats/figures

--- a/report.bib
+++ b/report.bib
@@ -113,7 +113,7 @@
 
 @online{shure,
 	author = {{Shure Inc.}},
-	title = "SM58 Vocal Microphone",
+	title = {{SM58 Vocal Microphone}},
 	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
 	urldate = "2014-04-20",
 	publisher = {{Shure Incorporate}},
